# battery_dismantle_task

./: .gitignore  CMakeLists.txt  README.md  USAGE_GUIDE.md  package.xml
battery_dismantle_task/LLM_Robot_Agent/: README.md  executor.py  llm_client.py  main.py  planner.py  run_demo.sh  test_complete_disassembly.py  validator.py
battery_dismantle_task/LLM_Robot_Agent/config/: prompt.txt  safety.yaml  skills.json
config/: gen3_robotiq_2f_85.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  robot_state_publisher_qos.yaml  waypoints.json
include/battery_dismantle_task/: DismantleTask.h  task_utils.h
launch/: debug_robot_visualization.launch.py  fake_execution.launch.py  llm_agent.launch.py  rviz_only.launch.py  test_minimal.launch.py
scripts/: publish_scene.py
src/: DismantleTask.cpp  dismantle_node.cpp  skill_server_node.cpp
