<?xml version="1.0"?>
<package format="3">
  <name>battery_dismantle_task</name>
  <version>0.1.0</version>
  <description>LLM-controlled battery disassembly task using Kinova Gen3 with Robotiq gripper and MoveIt Task Constructor</description>
  <maintainer email="olivia@example.com">Olivia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>std_msgs</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>rviz2</depend>
  <depend>kortex_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>